<resources>
    <string name="app_name">Bite Size</string>
    <string name="title_activity_home">Home</string>
    <string name="slogan1">For all your cravings.</string>
    <string name="slogan2">Love at first bite...</string>
    <string name="slogan3">A bite of home.</string>
    <string name="slogan4">Take a bite out of hunger.</string>
    <string name="slogan5">Killing hunger bite by bite.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="signInButton">Sign In</string>
    <string name="signUpButton">Sign Up</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="Rs">\u20B9</string>
    <string name="Cart">U+1F6D2</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="food_name">Food Name</string>
    <string name="_1000">\u20B91000</string>
    <string name="total">Total : </string>
    <string name="place_order">Place Order</string>
    <string name="select_item_size">Select item size</string>
    <string name="clear_cart">Clear Cart</string>
</resources>
