<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/image_blr_1"
    tools:context=".Cart">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listCart"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>

    <androidx.cardview.widget.CardView
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="#A5141C0A"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_alignParentLeft="true"
                    android:text="@string/total"
                    android:textColor="#C0D114"
                    android:textSize="20sp"></TextView>

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="15dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:text="@string/_1000"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"></TextView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnClearCart"
                    android:layout_width="184dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:background="@drawable/button_round_3"
                    android:fontFamily="@font/arima_madurai"
                    android:text="@string/clear_cart"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnPlaceOrder"
                    android:layout_width="184dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/button_round_2"
                    android:fontFamily="@font/arima_madurai"
                    android:text="@string/place_order"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>