<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_4"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSignUp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/sign_up_foreground"
            android:background="@drawable/button_round"
            android:shadowColor="@android:color/background_dark"
            android:text="@string/signUpButton"
            android:paddingLeft="36dp"
            android:textAlignment="textStart"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSignIn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:layout_margin="5dp"
            android:background="@drawable/button_round"
            android:drawableLeft="@drawable/sign_in_foreground"
            android:text="@string/signInButton"
            android:textAlignment="textStart"
            android:paddingLeft="40dp"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="3dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bitesize_logo_white" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/imageView3"
        android:layout_alignEnd="@id/imageView3"

        android:layout_marginTop="300dp"
        android:layout_marginBottom="1dp"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/slogan2"
        android:textStyle="italic"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


</RelativeLayout>